fixed alert and leaderboard ads overlap on mobile (#944)

--- a/src/app/styles/components/_ads.scss
+++ b/src/app/styles/components/_ads.scss
@@ -13,7 +13,7 @@
 .ad--section-top-leaderboard {
     background: none;
     margin-bottom: 0;
-    padding-top: 73px;
+    padding-top: 93px;
     padding-bottom: 0;
 
     @media #{$medium-up} {
